Changed NIOSIIe to NIOSIIf

--- a/003FPGASoftcoresAndIPAcquisition/Week01/nios_lab/nios_lab.html
+++ b/003FPGASoftcoresAndIPAcquisition/Week01/nios_lab/nios_lab.html
@@ -67,7 +67,7 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
   </table>
   <table class="blueBar">
    <tr>
-    <td class="l">2021.03.08.11:37:38</td>
+    <td class="l">2021.03.08.11:44:31</td>
     <td class="r">Datasheet</td>
    </tr>
   </table>
@@ -479,11 +479,11 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
        </tr>
        <tr>
         <td class="parametername">shifterType</td>
-        <td class="parametervalue">medium_le_shift</td>
+        <td class="parametervalue">fast_le_shift</td>
        </tr>
        <tr>
         <td class="parametername">multiplierType</td>
-        <td class="parametervalue">no_mul</td>
+        <td class="parametervalue">mul_fast32</td>
        </tr>
        <tr>
         <td class="parametername">mul_shift_choice</td>
@@ -535,11 +535,11 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
        </tr>
        <tr>
         <td class="parametername">impl</td>
-        <td class="parametervalue">Tiny</td>
+        <td class="parametervalue">Fast</td>
        </tr>
        <tr>
         <td class="parametername">icache_size</td>
-        <td class="parametervalue">4096</td>
+        <td class="parametervalue">2048</td>
        </tr>
        <tr>
         <td class="parametername">fa_cache_line</td>
@@ -679,7 +679,7 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
        </tr>
        <tr>
         <td class="parametername">debug_hwbreakpoint</td>
-        <td class="parametervalue">0</td>
+        <td class="parametervalue">2</td>
        </tr>
        <tr>
         <td class="parametername">debug_datatrigger</td>
@@ -839,7 +839,7 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
        </tr>
        <tr>
         <td class="parametername">setting_bit31BypassDCache</td>
-        <td class="parametervalue">false</td>
+        <td class="parametervalue">true</td>
        </tr>
        <tr>
         <td class="parametername">translate_on</td>
@@ -1060,23 +1060,27 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
        </tr>
        <tr>
         <td class="parametername">CPU_IMPLEMENTATION</td>
-        <td class="parametervalue">"tiny"</td>
+        <td class="parametervalue">"fast"</td>
        </tr>
        <tr>
         <td class="parametername">DATA_ADDR_WIDTH</td>
         <td class="parametervalue">12</td>
        </tr>
        <tr>
+        <td class="parametername">DCACHE_BYPASS_MASK</td>
+        <td class="parametervalue">0x80000000</td>
+       </tr>
+       <tr>
         <td class="parametername">DCACHE_LINE_SIZE</td>
-        <td class="parametervalue">0</td>
+        <td class="parametervalue">32</td>
        </tr>
        <tr>
         <td class="parametername">DCACHE_LINE_SIZE_LOG2</td>
-        <td class="parametervalue">0</td>
+        <td class="parametervalue">5</td>
        </tr>
        <tr>
         <td class="parametername">DCACHE_SIZE</td>
-        <td class="parametervalue">0</td>
+        <td class="parametervalue">2048</td>
        </tr>
        <tr>
         <td class="parametername">EXCEPTION_ADDR</td>
@@ -1100,7 +1104,7 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
        </tr>
        <tr>
         <td class="parametername">HARDWARE_MULTIPLY_PRESENT</td>
-        <td class="parametervalue">0</td>
+        <td class="parametervalue">1</td>
        </tr>
        <tr>
         <td class="parametername">HARDWARE_MULX_PRESENT</td>
@@ -1115,6 +1119,10 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
         <td class="parametervalue"></td>
        </tr>
        <tr>
+        <td class="parametername">HAS_EXTRA_EXCEPTION_INFO</td>
+        <td class="parametervalue"></td>
+       </tr>
+       <tr>
         <td class="parametername">HAS_ILLEGAL_INSTRUCTION_EXCEPTION</td>
         <td class="parametervalue"></td>
        </tr>
@@ -1124,19 +1132,27 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
        </tr>
        <tr>
         <td class="parametername">ICACHE_LINE_SIZE</td>
-        <td class="parametervalue">0</td>
+        <td class="parametervalue">32</td>
        </tr>
        <tr>
         <td class="parametername">ICACHE_LINE_SIZE_LOG2</td>
-        <td class="parametervalue">0</td>
+        <td class="parametervalue">5</td>
        </tr>
        <tr>
         <td class="parametername">ICACHE_SIZE</td>
-        <td class="parametervalue">0</td>
+        <td class="parametervalue">2048</td>
+       </tr>
+       <tr>
+        <td class="parametername">INITDA_SUPPORTED</td>
+        <td class="parametervalue"></td>
        </tr>
        <tr>
         <td class="parametername">INST_ADDR_WIDTH</td>
         <td class="parametervalue">12</td>
+       </tr>
+       <tr>
+        <td class="parametername">NUM_OF_SHADOW_REG_SETS</td>
+        <td class="parametervalue">0</td>
        </tr>
        <tr>
         <td class="parametername">OCI_VERSION</td>
@@ -1890,7 +1906,7 @@ div.greydiv { vertical-align:top ; text-align:center ; background:#eeeeee ; bord
   <table class="blueBar">
    <tr>
     <td class="l">generation took 0,00 seconds</td>
-    <td class="r">rendering took 0,04 seconds</td>
+    <td class="r">rendering took 0,05 seconds</td>
    </tr>
   </table>
  </body>
